--- a/Website.css
+++ b/Website.css
@@ -5,7 +5,7 @@
 body {
   min-height: 2000px;
   padding-top: 70px;
-  background-color: #ff0000;
+  background-color: #A4A4A4;
 }
 
 
@@ -44,7 +44,7 @@ body {
 -------------------------------------------------- */
 
 .carousel{
-    background: #ff0000;
+    background: #A4A4A4;
     margin-top: 20px;
 }
 .carousel .item img{
@@ -56,7 +56,7 @@ body {
 /* Declare heights because of positioning of img element */
 .carousel .item {
   height: 550px;
-  background-color: #ff0000;
+  background-color: #A4A4A4;
 
 
 
