--- a/templates/usedcars.html
+++ b/templates/usedcars.html
@@ -14,7 +14,7 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- Custom styles for this template -->
-    <link href="Website.css" rel="stylesheet">
+    <link rel="stylesheet" href="static/css/Website.css">
   </head>
 
 <!-- NAVBAR
@@ -30,23 +30,24 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="Homepage.html" class="navbar-brand">Trader Joes</a>
+            <a href="/traderjoes" class="navbar-brand">Trader Joes</a>
         </div>
         <!-- Collection of nav links and other content for toggling -->
         <div id="navbarCollapse" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="Homepage.html">Home</a></li>
-                <li><a href="Aboutus.html">About Us</a></li>
-                <li><a href="usedcars.html">Used Cars</a></li>
-                <li><a href="testimonials.html">Testimonials</a></li>
-                <li><a href="contactus.html">Contact Us</a></li>
+                <li class="active"><a href="/homepage">Home</a></li>
+                <li><a href="/aboutus">About Us</a></li>
+                <li><a href="/usedcars">Used Cars</a></li>
+                <li><a href="/testimonials">Testimonials</a></li>
+                <li><a href="/contactus">Contact Us</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Login</a></li>
+                <li><a href="/login">Login</a></li>
             </ul>
         </div>
     </nav>
 </div>
+
 
 
 <!-- Container (Used Cars) -->
@@ -56,7 +57,7 @@
   <div class="row text-center">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="images/e63.jpg" alt="E63" width="400" height="300">
+        <img src="/static/images/e63.jpg" alt="E63" width="400" height="300">
         <p><strong>Mercedes Benz E63</strong></p>
         <p>Mercedes-AMG E 63
 
@@ -71,7 +72,7 @@
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="images/c63.jpg" alt="C63" width="400" height="300">
+        <img src="/static/images/c63.jpg" alt="C63" width="400" height="300">
         <p><strong>Mercedes Benz E63</strong></p>
         <p>THE BENCHMARK IN PERFORMANCE, DYNAMISM AND EFFICIENCY.
           Absurd power and blistering acceleration are not the E63’s only party tricks; thanks to computer magic and an excellent suspension, it’s also quite agile. But oh, that mighty 577-hp 5.5-liter twin-turbo V-8 is a sweetheart of an engine. A seven-speed automatic and all-wheel drive are standard, as are 14-way power-operated and heated/cooled seats.
@@ -81,7 +82,7 @@
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="images/audir8.jpg" alt="R8" width="400" height="300">
+        <img src="/static/images/audir8.jpg" alt="R8" width="400" height="300">
         <p><strong>Audi R8</strong></p>
         <p>Audi R8 4.2 QUATTRO 2008, Semi Automatic R Tronic (F1 Paddle Shit Gears) Full AUDI Service History Just Been Serviced, First To See Will Buy, Excellent Condition. 44,000 Miles, Auto Bio Xenon Headlights, Warranty till Feb 2017, Carbon Look key, Carbon Engine Bay (Rare Option) Engine Bay Lighting, Home Link Light Package, Black Electrically Adjustable Leather Interior with Alcantara Headlining, Carbon Trim Interior, Bang & Olufsen Sound System, Aux Input, CD Changer, Audi Navigation Plus, Front & Rear Acoustic Parking System, Bluetooth Phone Preparation, Auto Hill Hold Assist, Aluminium Interior Trim, Electric Windows, Auto-dimming Electric Folding Door Mirrors, Heated Seats, Automatic Climate Control, Automatic Headlights, Heated Rear Windscreen, Driver Information Display, Multi-function Steering Wheel, Audi 19'' 5-Arm Double Spoke Alloy Wheels With Blue Wrapped Calipers.
         £35000</p>
@@ -89,7 +90,7 @@
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="images/mercg63amg.jpg" alt="mercg63amg" width="400" height="300">
+        <img src="/static/images/mercg63amg.jpg" alt="mercg63amg" width="400" height="300">
         <p><strong>Mercedes G63AMG</strong></p>
         <p>On the contrary: the Mercedes-AMG G 63 turns any terrain into a sophisticated driving experience. It impresses you with high-quality fittings and extravagant accents that reflect the performance of the Mercedes-AMG G 63. The decorative elements made of real wood and the leather-clad gearshift stand out, as does the newly designed dashboard with the AMG instrument cluster -- which has a 280 km/h display and welcomes you with an AMG start-up screen. A large, center-mounted color display is part of the COMAND system, with a multiple DVD player and a COMAND controller.
         £125,000</p>
@@ -97,7 +98,7 @@
       </div>
       <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="images/gtr35.jpg" alt="gtr35" width="400" height="300">
+        <img src="/static/images/gtr35.jpg" alt="gtr35" width="400" height="300">
         <p><strong>Nissan Skyline GTR</strong></p>
         <p>The Nissan GT-R is a giant killer, a supercar that offers the kind of extreme performance that can normally only be achieved by ultra-pricey exotics. Packed with electronic handling and launch control aids, the GT-R - affectionately nicknamed "Godzilla" by enthusiasts - uses advanced technology to overcome its substantial curb weight and offer agile responses along with truly breathtaking acceleration
           £65,000</p>
@@ -105,7 +106,7 @@
         </div>
       <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="images/veyron.jpg" alt="veyron" width="400" height="300">
+        <img src="/static/images/veyron.jpg" alt="veyron" width="400" height="300">
         <p><strong>Bugatti Veyron</strong></p>
         <p>The Bugatti Veyron is, by every measure, the world's most extreme production road car. It's the quickest to 60, has the highest top speed, and it can absolutely dominate a track in spite of its weight.
           The Veyron's production run has ended, but a successor is right around the corner. Called Chiron, Bugatti's next supercar delivers 1,500 horsepower and 1,180 lb-ft. of torque
