--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -14,7 +14,7 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- Custom styles for this template -->
-    <link href="Website.css" rel="stylesheet">
+    <link rel="stylesheet" href="static/css/Website.css">
   </head>
 
 <!-- NAVBAR
@@ -30,19 +30,19 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="Homepage.html" class="navbar-brand">Trader Joes</a>
+            <a href="/traderjoes" class="navbar-brand">Trader Joes</a>
         </div>
         <!-- Collection of nav links and other content for toggling -->
         <div id="navbarCollapse" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="Homepage.html">Home</a></li>
-                <li><a href="Aboutus.html">About Us</a></li>
-                <li><a href="usedcars.html">Used Cars</a></li>
-                <li><a href="testimonials.html">Testimonials</a></li>
-                <li><a href="contactus.html">Contact Us</a></li>
+                <li class="active"><a href="/homepage">Home</a></li>
+                <li><a href="/aboutus">About Us</a></li>
+                <li><a href="/usedcars">Used Cars</a></li>
+                <li><a href="/testimonials">Testimonials</a></li>
+                <li><a href="/contactus">Contact Us</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="login.html">Login</a></li>
+                <li><a href="/login">Login</a></li>
             </ul>
         </div>
     </nav>
@@ -63,13 +63,13 @@
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
             <div class="item active">
-                <img src="../images/ml63.jpeg" alt="Mercedes Benz - ML63">
+                <img src="/static/images/ml63.jpeg" alt="Mercedes Benz - ML63">
             </div>
             <div class="item">
-                <img src="../images/rrsvr.png" alt="Range Rover SVR">
+                <img src="/static/images/rrsvr.png" alt="Range Rover SVR">
             </div>
             <div class="item">
-                <img src="../images/rs5.jpg" alt="Audi RS5">
+                <img src="/static/images/rs5.jpg" alt="Audi RS5">
             </div>
         </div>
         <!-- Carousel controls -->
@@ -98,7 +98,7 @@
     Saturday	10:00 - 19:00<br>
     Sunday	12:00 - 16:00<br>
 Alternative times available by appointment.</p>
-		<p><a href="usedcars.html" target="_blank" class="btn btn-success btn-lg">See our current stock</a></p>
+		<p><a href="/usedcars" target="_blank" class="btn btn-success btn-lg">See our current stock</a></p>
 	</div>
 
 
