--- a/templates/testimonials.html
+++ b/templates/testimonials.html
@@ -14,7 +14,7 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- Custom styles for this template -->
-    <link href="Website.css" rel="stylesheet">
+    <link rel="stylesheet" href="static/css/Website.css">
   </head>
 
 <!-- NAVBAR
@@ -30,19 +30,19 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="Homepage.html" class="navbar-brand">Trader Joes</a>
+            <a href="/traderjoes" class="navbar-brand">Trader Joes</a>
         </div>
         <!-- Collection of nav links and other content for toggling -->
         <div id="navbarCollapse" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="Homepage.html">Home</a></li>
-                <li><a href="Aboutus.html">About Us</a></li>
-                <li><a href="usedcars.html">Used Cars</a></li>
-                <li><a href="testimonials.html">Testimonials</a></li>
-                <li><a href="contactus.html">Contact Us</a></li>
+                <li class="active"><a href="/homepage">Home</a></li>
+                <li><a href="/aboutus">About Us</a></li>
+                <li><a href="/usedcars">Used Cars</a></li>
+                <li><a href="/testimonials">Testimonials</a></li>
+                <li><a href="/contactus">Contact Us</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Login</a></li>
+                <li><a href="/login">Login</a></li>
             </ul>
         </div>
     </nav>
