--- a/templates/testimonials.html
+++ b/templates/testimonials.html
@@ -63,7 +63,7 @@
     <footer>Meagan Knight</footer>
   </blockquote>
 <blockquote>
-    <p>I've always found lakeside cars to be a very good company to deal with and have purchased a couple of performance cars from them. Loving my Bentley GTC and I'm sure I'll see you guys in the winter to change cars</p>
+    <p>I've always found TraderJoes cars to be a very good company to deal with and have purchased a couple of performance cars from them. Loving my Bentley GTC and I'm sure I'll see you guys in the winter to change cars</p>
     <footer>Gary Parker</footer>
   </blockquote>
 
